# pywikibot-extensions

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  release-drafter-config.yaml  release.yml
.github/workflows/: ci.yaml  draft-release.yaml  publish.yaml
src/pywikibot_extensions/: page.py  textlib.py
tests/: conftest.py  page_test.py  textlib_test.py
