[build-system]
requires = ["poetry_core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py37"]
line-length = 79  # default: 88


[tool.coverage]

[tool.coverage.run]
plugins = [
    "covdefaults",
]
source_pkgs = ["pywikibot_extensions"]


[tool.isort]
py_version = 37
add_imports = ["from __future__ import annotations"]
atomic = true
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
lines_after_imports = 2
multi_line_output = 3
use_parentheses = true


[tool.mypy]
python_version = 3.7
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
enable_error_code = [
    "ignore-without-code",
]
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "pywikibot.*"
ignore_missing_imports = true


[tool.poetry]
authors = ["JJMC89"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Wiki",
    "Topic :: Utilities",
    "Typing :: Typed",
]
description = "Extends the Pywikibot library"
keywords = ["bot", "mediawiki"]
license = "MIT"
name = "pywikibot-extensions"
packages = [
    { include = "pywikibot_extensions", from = "src" },
]
readme = "README.md"
repository = "https://github.com/JJMC89/pywikibot-extensions"
version = "22.11.1"

[tool.poetry.dependencies]
python = "^3.7"
pywikibot = "^7.4.0"

[tool.poetry.dev-dependencies]
covdefaults = "2.2.0"
pre-commit = "2.20.0"
pylint = "2.13.9"
pytest = "7.2.0"
pytest-cov = "4.0.0"
pytest-mock = "3.10.0"
pytest-socket = "0.5.1"
pywikibot = {version = "^7.4.0", extras = ["mwparserfromhell"]}

[tool.pylint]

[tool.pylint.master]
# Use multiple processes to speed up Pylint.
jobs = 0  # default: 1

[tool.pylint.basic]
# Good variable names which should always be accepted
good-names = "e,i,j,k,_"  # default: i,j,k,ex,Run,_

[tool.pylint.format]
max-line-length = 79  # default: 100

[tool.pylint.reports]
reports = "yes"


[tool.pytest]

[tool.pytest.ini_options]
addopts = "--cov --no-cov-on-fail"
